# fast_moe

./: .gitignore  build.sh  buildall.sh  common.h  load.sh  readme.md  run.md  setup.py  setup.sh  test_gemv.py  test_gemv2.py  test_gemv_int4.py  test_gemv_int4_group.py  test_gemv_int4_group_mix.py  test_gemv_mix.py  todolist
common/: common.py
moe/: auto_generate_bf16.py  auto_generate_int4.py  moe_gemv_down.cu  moe_gemv_down.py  moe_gemv_gate.cu  moe_gemv_gate.py
moe/include/: common.h
qmoe/: .gitignore  __init__.py  ast_diagram  ast_interactive.html  astprint.py  compare.py  cpu_test_gemv_int4_triton_inline_ptx.py  fresh.sh  gemlitetest.py  gemv.ptx  kernel.ptx  kernel.py  out.tx  plt.py  plt2.py  print_ast.py  print_ast2.py  print_ast3.py  simple_ast  test.ptx  test.py  test.ttgir  test.ttir  test_dequant.py  test_gemv.py  test_gemv2.py  test_gemv_int4.py  test_gemv_int4_triton_inline_ptx.py  test_gemv_mix.py  test_hip.py  test_tr.py  triton_int4.py  zhubu.py
qmoe/amd/: amd_triton_inline.py  test_bitblas.py  test_bitblas2.py  test_dequant.py  test_rocm.py
qmoe/ast/: print_ast4.py  print_ptx.py
qmoe/benchmark/: benchmark_tilelang_matmul_fp16xint4.py  benchmark_triton.py
qmoe/common/: common.py
qmoe/cuda_src/: i4_kernel.cu  i4_kernel_fast.cu  i4_kernel_slow.cu  i4_kernel_slow_no_shared.cu  i4_kernel_slow_reduce_warp.cu  (+1 more)
qmoe/gemm_bench/: bench_w4a8.py  (+3 more)
w4a16kernel/: check_down_output.py  check_gate_up_output.py  entry.cu  entry.h  load.sh  pybind_mix.cpp  run.sh  setup.py  test.py
w4a16kernel/kernel/: CMakeLists.txt  kernel.cu  kernel.h  kerneli4.cu
(+43 files in other folders)
